--- a/1_6_2_Text_Summarization_Evaluate.ipynb
+++ b/1_6_2_Text_Summarization_Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -139,10 +139,10 @@
        "      <td>Shares of Sumitomo Mitsui Financial (SMFG), an...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.608108</td>\n",
-       "      <td>0.438202</td>\n",
-       "      <td>0.594595</td>\n",
-       "      <td>0.511145</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>0.413043</td>\n",
+       "      <td>0.565789</td>\n",
+       "      <td>0.474589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -151,10 +151,10 @@
        "      <td>Mr Sullivan is at the centre of the government...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.589041</td>\n",
-       "      <td>0.510000</td>\n",
-       "      <td>0.575342</td>\n",
-       "      <td>0.498677</td>\n",
+       "      <td>0.601156</td>\n",
+       "      <td>0.481328</td>\n",
+       "      <td>0.589595</td>\n",
+       "      <td>0.462690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -163,10 +163,10 @@
        "      <td>Shares in UK banking group Barclays have risen...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.715152</td>\n",
-       "      <td>0.691244</td>\n",
-       "      <td>0.715152</td>\n",
-       "      <td>0.632184</td>\n",
+       "      <td>0.710843</td>\n",
+       "      <td>0.669725</td>\n",
+       "      <td>0.710843</td>\n",
+       "      <td>0.594089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -175,10 +175,10 @@
        "      <td>The company should now be able put this disput...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.907895</td>\n",
-       "      <td>0.874419</td>\n",
-       "      <td>0.907895</td>\n",
-       "      <td>0.796049</td>\n",
+       "      <td>0.844720</td>\n",
+       "      <td>0.786325</td>\n",
+       "      <td>0.844720</td>\n",
+       "      <td>0.742846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -196,61 +196,61 @@
        "      <th>42</th>\n",
        "      <td>Fast lifts rise into record books Two high-spe...</td>\n",
        "      <td>The first record for the world's fastest passe...</td>\n",
-       "      <td>The lifts take only 30 seconds to whisk passen...</td>\n",
+       "      <td>\"None of the 10 former directors was a direct ...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.419162</td>\n",
-       "      <td>0.344828</td>\n",
-       "      <td>0.407186</td>\n",
-       "      <td>0.418460</td>\n",
+       "      <td>0.122222</td>\n",
+       "      <td>0.033755</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>-0.156751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>Apple attacked over sources row Civil libertie...</td>\n",
        "      <td>The EFF, representing the reporters, has asked...</td>\n",
-       "      <td>The EFF, representing the reporters, has asked...</td>\n",
+       "      <td>Russian oil and gas company Yukos is due in a ...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.216749</td>\n",
+       "      <td>0.013841</td>\n",
+       "      <td>0.177340</td>\n",
+       "      <td>-0.046351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>Joke e-mail virus tricks users A virus that di...</td>\n",
        "      <td>: Anti-virus firms are issuing high-level warn...</td>\n",
-       "      <td>Security firm Network Box said that it stopped...</td>\n",
+       "      <td>Regular annual bonus rates on former Axa Equit...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.695187</td>\n",
-       "      <td>0.578313</td>\n",
-       "      <td>0.684492</td>\n",
-       "      <td>0.532907</td>\n",
+       "      <td>0.118343</td>\n",
+       "      <td>0.008889</td>\n",
+       "      <td>0.106509</td>\n",
+       "      <td>-0.132662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
        "      <td>Norway upholds 'Napster' ruling A Norwegian st...</td>\n",
        "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
-       "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
+       "      <td>The sale of the US gaming unit will leave Wemb...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.744444</td>\n",
-       "      <td>0.650000</td>\n",
-       "      <td>0.744444</td>\n",
-       "      <td>0.687507</td>\n",
+       "      <td>0.136646</td>\n",
+       "      <td>0.017937</td>\n",
+       "      <td>0.124224</td>\n",
+       "      <td>-0.106501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
        "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
        "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
-       "      <td>James Cridland, head of new media at Virgin Ra...</td>\n",
+       "      <td>While pinpointing several areas in which there...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.445860</td>\n",
-       "      <td>0.346154</td>\n",
-       "      <td>0.433121</td>\n",
-       "      <td>0.421695</td>\n",
+       "      <td>0.150538</td>\n",
+       "      <td>0.008621</td>\n",
+       "      <td>0.139785</td>\n",
+       "      <td>-0.118460</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -291,41 +291,47 @@
        "3   Shares in UK banking group Barclays have risen...  business  business   \n",
        "4   The company should now be able put this disput...  business  business   \n",
        "..                                                ...       ...       ...   \n",
-       "42  The lifts take only 30 seconds to whisk passen...      tech      tech   \n",
-       "43  The EFF, representing the reporters, has asked...      tech      tech   \n",
-       "44  Security firm Network Box said that it stopped...      tech      tech   \n",
-       "45  Frank Allan Bruvik was ordered to pay 100,000 ...      tech      tech   \n",
-       "46  James Cridland, head of new media at Virgin Ra...      tech      tech   \n",
+       "42  \"None of the 10 former directors was a direct ...      tech      tech   \n",
+       "43  Russian oil and gas company Yukos is due in a ...      tech      tech   \n",
+       "44  Regular annual bonus rates on former Axa Equit...      tech      tech   \n",
+       "45  The sale of the US gaming unit will leave Wemb...      tech      tech   \n",
+       "46  While pinpointing several areas in which there...      tech      tech   \n",
        "\n",
        "     Rouge-1   Rouge-2   Rouge-l  BERTscore  \n",
        "0   0.638037  0.567568  0.638037   0.573879  \n",
-       "1   0.608108  0.438202  0.594595   0.511145  \n",
-       "2   0.589041  0.510000  0.575342   0.498677  \n",
-       "3   0.715152  0.691244  0.715152   0.632184  \n",
-       "4   0.907895  0.874419  0.907895   0.796049  \n",
+       "1   0.578947  0.413043  0.565789   0.474589  \n",
+       "2   0.601156  0.481328  0.589595   0.462690  \n",
+       "3   0.710843  0.669725  0.710843   0.594089  \n",
+       "4   0.844720  0.786325  0.844720   0.742846  \n",
        "..       ...       ...       ...        ...  \n",
-       "42  0.419162  0.344828  0.407186   0.418460  \n",
-       "43  1.000000  1.000000  1.000000   1.000000  \n",
-       "44  0.695187  0.578313  0.684492   0.532907  \n",
-       "45  0.744444  0.650000  0.744444   0.687507  \n",
-       "46  0.445860  0.346154  0.433121   0.421695  \n",
+       "42  0.122222  0.033755  0.111111  -0.156751  \n",
+       "43  0.216749  0.013841  0.177340  -0.046351  \n",
+       "44  0.118343  0.008889  0.106509  -0.132662  \n",
+       "45  0.136646  0.017937  0.124224  -0.106501  \n",
+       "46  0.150538  0.008621  0.139785  -0.118460  \n",
        "\n",
        "[1692 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "Real_df = pd.read_csv(\"Real_Evaluate_Summarize.csv\")\n",
     "path = 'output'\n",
     "total_score = pd.DataFrame()\n",
+    "df_cat = pd.DataFrame()\n",
     "for _, file in enumerate(os.listdir(path)):\n",
     "    df = pd.read_csv(path+\"/\"+file)\n",
-    "    df = add_score(df)\n",
-    "    total_score = pd.concat([total_score, df])\n",
+    "    df_cat = pd.concat([df_cat, df])\n",
     "    print(_, file)\n",
+    "    if _%6 == 5:\n",
+    "        df_cat[\"Actual Text\"] = Real_df[\"Real summarize\"]\n",
+    "        df_cat = add_score(df_cat)\n",
+    "        total_score = pd.concat([total_score, df_cat])\n",
+    "        df_cat = pd.DataFrame()\n",
     "total_score\n"
    ]
   },
@@ -347,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -402,10 +408,10 @@
        "      <td>Shares of Sumitomo Mitsui Financial (SMFG), an...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.608108</td>\n",
-       "      <td>0.438202</td>\n",
-       "      <td>0.594595</td>\n",
-       "      <td>0.511145</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>0.413043</td>\n",
+       "      <td>0.565789</td>\n",
+       "      <td>0.474589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -414,10 +420,10 @@
        "      <td>Mr Sullivan is at the centre of the government...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.589041</td>\n",
-       "      <td>0.510000</td>\n",
-       "      <td>0.575342</td>\n",
-       "      <td>0.498677</td>\n",
+       "      <td>0.601156</td>\n",
+       "      <td>0.481328</td>\n",
+       "      <td>0.589595</td>\n",
+       "      <td>0.462690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -426,10 +432,10 @@
        "      <td>Shares in UK banking group Barclays have risen...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.715152</td>\n",
-       "      <td>0.691244</td>\n",
-       "      <td>0.715152</td>\n",
-       "      <td>0.632184</td>\n",
+       "      <td>0.710843</td>\n",
+       "      <td>0.669725</td>\n",
+       "      <td>0.710843</td>\n",
+       "      <td>0.594089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -438,10 +444,10 @@
        "      <td>The company should now be able put this disput...</td>\n",
        "      <td>business</td>\n",
        "      <td>business</td>\n",
-       "      <td>0.907895</td>\n",
-       "      <td>0.874419</td>\n",
-       "      <td>0.907895</td>\n",
-       "      <td>0.796049</td>\n",
+       "      <td>0.844720</td>\n",
+       "      <td>0.786325</td>\n",
+       "      <td>0.844720</td>\n",
+       "      <td>0.742846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -459,61 +465,61 @@
        "      <th>1687</th>\n",
        "      <td>Fast lifts rise into record books Two high-spe...</td>\n",
        "      <td>The first record for the world's fastest passe...</td>\n",
-       "      <td>The lifts take only 30 seconds to whisk passen...</td>\n",
+       "      <td>\"None of the 10 former directors was a direct ...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.419162</td>\n",
-       "      <td>0.344828</td>\n",
-       "      <td>0.407186</td>\n",
-       "      <td>0.418460</td>\n",
+       "      <td>0.122222</td>\n",
+       "      <td>0.033755</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>-0.156751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1688</th>\n",
        "      <td>Apple attacked over sources row Civil libertie...</td>\n",
        "      <td>The EFF, representing the reporters, has asked...</td>\n",
-       "      <td>The EFF, representing the reporters, has asked...</td>\n",
+       "      <td>Russian oil and gas company Yukos is due in a ...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.216749</td>\n",
+       "      <td>0.013841</td>\n",
+       "      <td>0.177340</td>\n",
+       "      <td>-0.046351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1689</th>\n",
        "      <td>Joke e-mail virus tricks users A virus that di...</td>\n",
        "      <td>: Anti-virus firms are issuing high-level warn...</td>\n",
-       "      <td>Security firm Network Box said that it stopped...</td>\n",
+       "      <td>Regular annual bonus rates on former Axa Equit...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.695187</td>\n",
-       "      <td>0.578313</td>\n",
-       "      <td>0.684492</td>\n",
-       "      <td>0.532907</td>\n",
+       "      <td>0.118343</td>\n",
+       "      <td>0.008889</td>\n",
+       "      <td>0.106509</td>\n",
+       "      <td>-0.132662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1690</th>\n",
        "      <td>Norway upholds 'Napster' ruling A Norwegian st...</td>\n",
        "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
-       "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
+       "      <td>The sale of the US gaming unit will leave Wemb...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.744444</td>\n",
-       "      <td>0.650000</td>\n",
-       "      <td>0.744444</td>\n",
-       "      <td>0.687507</td>\n",
+       "      <td>0.136646</td>\n",
+       "      <td>0.017937</td>\n",
+       "      <td>0.124224</td>\n",
+       "      <td>-0.106501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1691</th>\n",
        "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
        "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
-       "      <td>James Cridland, head of new media at Virgin Ra...</td>\n",
+       "      <td>While pinpointing several areas in which there...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
-       "      <td>0.445860</td>\n",
-       "      <td>0.346154</td>\n",
-       "      <td>0.433121</td>\n",
-       "      <td>0.421695</td>\n",
+       "      <td>0.150538</td>\n",
+       "      <td>0.008621</td>\n",
+       "      <td>0.139785</td>\n",
+       "      <td>-0.118460</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -554,29 +560,29 @@
        "3     Shares in UK banking group Barclays have risen...  business  business   \n",
        "4     The company should now be able put this disput...  business  business   \n",
        "...                                                 ...       ...       ...   \n",
-       "1687  The lifts take only 30 seconds to whisk passen...      tech      tech   \n",
-       "1688  The EFF, representing the reporters, has asked...      tech      tech   \n",
-       "1689  Security firm Network Box said that it stopped...      tech      tech   \n",
-       "1690  Frank Allan Bruvik was ordered to pay 100,000 ...      tech      tech   \n",
-       "1691  James Cridland, head of new media at Virgin Ra...      tech      tech   \n",
+       "1687  \"None of the 10 former directors was a direct ...      tech      tech   \n",
+       "1688  Russian oil and gas company Yukos is due in a ...      tech      tech   \n",
+       "1689  Regular annual bonus rates on former Axa Equit...      tech      tech   \n",
+       "1690  The sale of the US gaming unit will leave Wemb...      tech      tech   \n",
+       "1691  While pinpointing several areas in which there...      tech      tech   \n",
        "\n",
        "       Rouge-1   Rouge-2   Rouge-l  BERTscore  \n",
        "0     0.638037  0.567568  0.638037   0.573879  \n",
-       "1     0.608108  0.438202  0.594595   0.511145  \n",
-       "2     0.589041  0.510000  0.575342   0.498677  \n",
-       "3     0.715152  0.691244  0.715152   0.632184  \n",
-       "4     0.907895  0.874419  0.907895   0.796049  \n",
+       "1     0.578947  0.413043  0.565789   0.474589  \n",
+       "2     0.601156  0.481328  0.589595   0.462690  \n",
+       "3     0.710843  0.669725  0.710843   0.594089  \n",
+       "4     0.844720  0.786325  0.844720   0.742846  \n",
        "...        ...       ...       ...        ...  \n",
-       "1687  0.419162  0.344828  0.407186   0.418460  \n",
-       "1688  1.000000  1.000000  1.000000   1.000000  \n",
-       "1689  0.695187  0.578313  0.684492   0.532907  \n",
-       "1690  0.744444  0.650000  0.744444   0.687507  \n",
-       "1691  0.445860  0.346154  0.433121   0.421695  \n",
+       "1687  0.122222  0.033755  0.111111  -0.156751  \n",
+       "1688  0.216749  0.013841  0.177340  -0.046351  \n",
+       "1689  0.118343  0.008889  0.106509  -0.132662  \n",
+       "1690  0.136646  0.017937  0.124224  -0.106501  \n",
+       "1691  0.150538  0.008621  0.139785  -0.118460  \n",
        "\n",
        "[1692 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,11 +594,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_score.to_csv(\"Results/Total_score.csv\")"
+    "total_score.to_csv(\"Results/Total_score_New.csv\")"
    ]
   },
   {
